--- a/raw/config/gapper.yml
+++ b/raw/config/gapper.yml
@@ -1,6 +1,6 @@
 ---
 auth:
-    NK: 
-        icon: /assets/img/gapper-auth-nankai/logo.png
+    nankai:
+        icon: assets/img/gapper-auth-nankai/logo.png
         name: 南开一卡通
 ...
